java_binary(
  name = "BinaryTreeLevelOrderTraversal",
  srcs = ["BinaryTreeLevelOrderTraversal.java"],
  deps = [":TreeNode"]
)

java_binary(
  name = "CloneGraph",
  srcs = ["CloneGraph.java"],
  deps = [":Node"]
)

java_binary(
  name = "CombinationSum",
  srcs = ["CombinationSum.java"]
)

java_binary(
  name = "CombinationsOfPhoneNumber",
  srcs = ["CombinationsOfPhoneNumber.java"]
)

java_binary(
  name = "CoinChange",
  srcs = ["CoinChange.java"]
)

java_binary(
  name = "FindPivotIndex",
  srcs = ["FindPivotIndex.java"]
)

java_binary(
  name = "FizzBuzzMultiThreaded",
  srcs = ["FizzBuzzMultiThreaded.java"]
)

java_binary(
  name = "IsoMorphicStrings",
  srcs = ["IsoMorphicStrings.java"]
)

java_binary(
  name = "IsSubsequence",
  srcs = ["IsSubsequence.java"]
)

java_binary(
  name = "KClosestToOrigin",
  srcs = ["KClosestToOrigin.java"]
)

java_binary(
  name = "LinkedListCycleII",
  srcs = ["LinkedListCycleII.java"],
  deps = [":ListNode"]
)

java_binary(
  name = "LongestSubstringWithoutRepeating",
  srcs = ["LongestSubstringWithoutRepeating.java"]
)

java_binary(
  name = "LongestPalindrome",
  srcs = ["LongestPalindrome.java"]
)

java_library(
  name = "ListNode",
  srcs = ["ListNode.java"]
)

java_binary(
  name = "MatrixDistanceToClosestZero",
  srcs = ["MatrixDistanceToClosestZero.java"]
)

java_binary(
  name = "MinStack",
  srcs = ["MinStack.java"]
)

java_binary(
  name = "MiddleOfLinkedList",
  srcs = ["MiddleOfLinkedList.java"],
  deps = [":ListNode"]
)

java_binary(
  name = "NaryTreePreorderTraversal",
  srcs = ["NaryTreePreorderTraversal.java"],
)

java_library(
  name = "Node",
  srcs = ["Node.java"]
)

java_library(
  name = "Pair",
  srcs = ["Pair.java"]
)

java_binary(
  name = "PrintFooBarAlternately",
  srcs = ["PrintFooBarAlternately.java"]
)

java_binary(
  name = "PrintInOrder",
  srcs = ["PrintInOrder.java"]
)

java_binary(
  name = "RandomPickWithWeight",
  srcs = ["RandomPickWithWeight.java"],
)

java_binary(
  name = "ReversePolishNotation",
  srcs = ["ReversePolishNotation.java"],
)

java_binary(
  name = "RomanNumeralToInt",
  srcs = ["RomanNumeralToInt.java"],
)

java_binary(
  name = "ReverseLinkedList",
  srcs = ["ReverseLinkedList.java"],
  deps = [":ListNode"]
)

java_binary(
  name = "ReverseLinkedListII",
  srcs = ["ReverseLinkedListII.java"],
  deps = [":ListNode"]
)

java_binary(
  name = "ScheduleOrder",
  srcs = ["ScheduleOrder.java"]
)

java_binary(
  name = "SearchRotatedSortedArray",
  srcs = ["SearchRotatedSortedArray.java"]
)

java_binary(
  name = "ThreeSum",
  srcs = ["ThreeSum.java"]
)

java_library(
  name = "TreeNode",
  srcs = ["TreeNode.java"]
)

java_library(
  name = "Trie",
  srcs = ["Trie.java"]
)

java_binary(
  name = "WordBreak",
  srcs = ["WordBreak.java"]
)

java_binary(
  name = "WordLadder",
  srcs = ["WordLadder.java"],
  deps = [":Pair"]
)
